--- a/src/app/Pages/posts/posts.component.scss
+++ b/src/app/Pages/posts/posts.component.scss
@@ -26,32 +26,61 @@ main {
         text-align: center;
         color: color(primary);
         background-color: #fff;
-        padding: 20px;
+        padding: 10px;
         margin: 1em auto;
         border-radius: $borders;
         box-shadow: 0 10px 30px rgba(0,0,0,.2);
         width: fit-content;
         height: fit-content;
         margin-top: 1em;
-        padding-left: 25px;
-        padding-right: 25px;
 
         @include desktop {
-            width: 300px;
+            width: 50%;
             height: fit-content;
-            padding-left: 50px;
-            padding-right: 50px;
         }
 
         h3 {
             text-align: start;
+            margin-left: 10px;
 
             img {
-                margin-right: 7px;
                 vertical-align: middle;
-                height: 60px;
+                height: 50px;
                 width: 50px;
                 border-radius: 50%;
+            }
+
+            p {
+                width: fit-content;
+                text-align: start;
+                display: inline-block;
+                @include desktop {
+                    margin-left: 10px;
+                }
+            }
+
+            small {
+                padding: 0;
+                margin: 0;
+                display: inline-block;
+                margin-left: 40%;
+                color: color(primary);
+            }
+        }
+        p {
+            text-align: start;
+            margin-left: 10px;
+            img {   
+                vertical-align: middle;  
+                height: 250px;
+                width: 250px;           
+            }
+            strong {   
+                margin-left: 7px; 
+                display: inline-block;         
+                text-align: center;
+                vertical-align: middle;
+                width: 50%;
             }
         }
     }
