--- a/src/app/Pages/view-user/view-user.component.scss
+++ b/src/app/Pages/view-user/view-user.component.scss
@@ -25,7 +25,7 @@ main {
     section#Card {
         text-align: center;
         color: color(primary);
-        background-color: color(accent);
+        background-color: #fff;
         padding: 20px;
         margin: 1em auto;
         border-radius: $borders;
@@ -42,8 +42,17 @@ main {
             padding-left: 50px;
             padding-right: 50px;
         }
+        h2 {
+            margin: 0;
+            margin-top: 10px;
+        }
+        h4 {
+            margin: 0;
+            margin-bottom: 10px;
+        }
 
         img {
+            border-radius: 25%;
             height: 180px;
             width: 120px;
 
@@ -52,21 +61,35 @@ main {
                 width: 80%;
             }
         }
+
+        div {
+            color: color(primary);
+            display: inline-block;
+            justify-content: start;
+            text-align: start;
+            margin: 0;
+            margin-bottom: 20px;
+            padding: 0;
+
+            p {
+                margin: 0;
+                margin-top: 7px;
+                text-align: start;
+                display: inline-block;
+            }
+        }
     }
 
     a#goBackBtn {
-        margin-left: 42%;
-        margin-right: 42%;
-        margin-top: 10px;
+        margin-top: 100px;
         cursor: pointer;
         color: #fff;
         border-radius: $borders;
         text-decoration: none;
         text-transform: uppercase;
         font-weight: bold;
-        background-color: color(primary-dark);
+        background-color: color(primary);
         width: fit-content;
-        margin-top: 7px;
         text-align: center;
 
             &:hover {
