--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <title>User Profiles</title>
 </head>
 <body>
+  <ng-http-loader [backdrop]="true" [backgroundColor]="'#005Dff'"></ng-http-loader>
   <div id="bg"></div>
   <router-outlet></router-outlet>
 </body>
