--- a/src/app/Pages/view-user/view-user.component.html
+++ b/src/app/Pages/view-user/view-user.component.html
@@ -11,6 +11,7 @@
                 <p>Date of Birth:  {{ user.dateOfBirth }}</p>
                 <p>Location:  {{ user.location.country }}, {{ user.location.city}}</p>
                 <p>Phone:  {{ user.phone }}</p>
+                <p>Email: {{ user.email }}</p>
                 <p>Registered On:  {{ user.registerDate }}</p>
             </div>
             <a id="goBackBtn" (click) = "onBack()">Go Back</a>
