--- a/src/app/Pages/home/home.component.scss
+++ b/src/app/Pages/home/home.component.scss
@@ -42,8 +42,6 @@ main {
         border-radius: $borders;
         box-shadow: 0 10px 30px rgba(0,0,0,.2);
         width: fit-content;
-        height: fit-content;
-        margin-top: 1em;
         padding-left: 50px;
         padding-right: 50px;
 
@@ -55,7 +53,7 @@ main {
 
         @include desktop {
             width: 250px;
-            height: fit-content;
+            height: 280px;
             padding-left: 20px;
             padding-right: 20px;
         }
@@ -64,6 +62,25 @@ main {
             border-radius: 25%;
             height: 180px;
             width: 150px;
+        }
+    }
+}
+
+div {
+    margin: auto;
+    justify-content: center;
+    position: absolute;
+    bottom: 30px;
+    display: block;
+    background-color: color(primary);
+    width: fit-content;
+    color: color(primary);
+
+    pagination-controls {
+        display: none;
+        @include desktop
+        {
+            display: block;
         }
     }
 }
