--- a/src/app/Pages/view-user/view-user.component.scss
+++ b/src/app/Pages/view-user/view-user.component.scss
@@ -63,13 +63,15 @@ main {
         }
 
         div {
-            color: color(primary);
-            display: inline-block;
-            justify-content: start;
+            width: 100%;
+            border-radius: 10%;
+            padding: 10px;
+            border:5px solid color(accent);
+            color: color(primary);          
+            justify-content: center;
             text-align: start;
-            margin: 0;
+            margin: auto;
             margin-bottom: 20px;
-            padding: 0;
 
             p {
                 margin: 0;
